--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/tenant.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/tenant.yaml
@@ -32,7 +32,11 @@ spec:
     name: minio-tenant-secret
   users:
     - name: db-backup-secret
+    - name: thanos-store-secret
   buckets:
     - name: "db-backup"
+      region: "us-east-1"
+      objectLock: true
+    - name: "thanos"
       region: "us-east-1"
       objectLock: true
