update secret key

--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -414,6 +414,7 @@ tasks:
       - vault kv put -mount=secret storage/minio
           ROOT_USER="{{.MINIO_ROOT_USER}}"
           ROOT_PASSWORD="{{.MINIO_ROOT_PASSWORD}}"
+          CONSOLE_SECRET_KEY="{{.MINIO_CONSOLE_SECRET_KEY}}"
           CONSOLE_ACCESS_KEY="{{.MINIO_CONSOLE_ACCESS_KEY}}"
       # volsync
       - vault kv put -mount=secret volsync/volsync
