--- a/kubernetes/apps/k8s/monitoring/thanos/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/thanos/app/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
       engineVersion: v2
       data:
         CONSOLE_ACCESS_KEY: "{{.CONSOLE_ACCESS_KEY}}"
-        CONSOLE_SECRET_KEY: ""
+        CONSOLE_SECRET_KEY: "{{.CONSOLE_SECRET_KEY}}"
         BUCKET_NAME: "thanos"
         BUCKET_HOST: "https://minio.${K0S_DOMAIN}"
         BUCKET_REGION: "us-east1"
