--- a/kubernetes/apps/k8s/monitoring/thanos/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/thanos/app/externalsecret.yaml
@@ -17,7 +17,7 @@ spec:
         CONSOLE_ACCESS_KEY: "{{.CONSOLE_ACCESS_KEY}}"
         CONSOLE_SECRET_KEY: "{{.CONSOLE_SECRET_KEY}}"
         BUCKET_NAME: "thanos"
-        BUCKET_HOST: "https://minio.${K0S_DOMAIN}"
+        BUCKET_HOST: "minio.${K0S_DOMAIN}"
         BUCKET_REGION: "us-east1"
   dataFrom:
     - extract:
