--- a/kubernetes/apps/k8s/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/k8s/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -57,7 +57,7 @@ spec:
       mgr:
         modules:
           - name: pg_autoscaler
-            enabled: true
+            enabled: false
           - name: rook
             enabled: true
       dashboard:
