test cluster mesh

--- a/.taskfiles/ansible.yaml
+++ b/.taskfiles/ansible.yaml
@@ -37,6 +37,7 @@ tasks:
     cmds:
       - "ansible-playbook -i {{.ANSIBLE_HOSTS_FILE}} {{.ANSIBLE_PLAYBOOK_DIR}}/cluster-installation.yaml -b"
       - "task kubernetes:install-crds"
+      - "task kubernetes:setup-cilium-ca || true"
     silent: true
 
   reset:
