--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -34,15 +34,17 @@ spec:
     cluster:
       name: "k8s"
       id: "${CILIUM_ID}"
+    clustermesh:
+      useAPIServer: true
+      apiserver:
+        service:
+          type: loadBalancer
+          loadBalancerIP: "${CILIUM_LB_IP}"
     containerRuntime:
       integration: containerd
       socketPath: /var/run/k3s/containerd/containerd.sock
     endpointRoutes:
       enabled: true
-    # gatewayAPI:
-    #   enabled: true
-    #   service:
-    #     loadBalancerIP: "${CILIUM_LB_IP}"
     ingressController:
       enabled: false
       enforceHttps: true
