--- a/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
       apiserver:
         service:
           type: LoadBalancer
-          #loadBalancerIP: "${CILIUM_LB_IP}"
+          loadBalancerIP: "${CILIUM_LB_IP}"
     containerRuntime:
       integration: containerd
       socketPath: /var/run/k3s/containerd/containerd.sock
