--- a/.taskfiles/kubernetes.yaml
+++ b/.taskfiles/kubernetes.yaml
@@ -62,12 +62,13 @@ tasks:
       - "kubectl apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_udproutes.yaml"
       - "kubectl apply -f https://raw.githubusercontent.com/external-secrets/kubernetes-external-secrets/master/charts/kubernetes-external-secrets/crds/kubernetes-client.io_externalsecrets_crd.yaml"
 
-  setup-cilium-ca:
+  setup-cilium-mesh:
     cmds:
       - KUBECONFIG=./k0s.kubeconfig kubectl get secret -n kube-system cilium-ca -o yaml > /tmp/cilium-ca.yml
       - KUBECONFIG=./k8s.kubeconfig kubectl delete secret -n kube-system cilium-ca || true
       - KUBECONFIG=./k8s.kubeconfig kubectl create -f /tmp/cilium-ca.yml
       - rm -f /tmp/cilium-ca.yml
+      #- cilium clustermesh connect --context k0s --destination-context k8s
     preconditions:
       - &test-k8s
         sh: "[ {{.ENVIRONMENT}} = 'k8s' ]"
