test global annotation

--- a/kubernetes/apps/k0s/vault/vault/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/vault/vault/app/helmrelease.yaml
@@ -34,3 +34,6 @@ spec:
         storageClass: local-path
       standalone:
         enabled: "true"
+      service:
+        annotations:
+          io.cilium/global-service: "true"
