flip to context, handle multiple kibeconfigs

--- a/.taskfiles/kubernetes.yaml
+++ b/.taskfiles/kubernetes.yaml
@@ -64,9 +64,9 @@ tasks:
 
   setup-cilium-mesh:
     cmds:
-      - KUBECONFIG=./k0s.kubeconfig kubectl get secret -n kube-system cilium-ca -o yaml > /tmp/cilium-ca.yml
-      - KUBECONFIG=./k8s.kubeconfig kubectl delete secret -n kube-system cilium-ca || true
-      - KUBECONFIG=./k8s.kubeconfig kubectl create -f /tmp/cilium-ca.yml
+      - kubectl --context k0s get secret -n kube-system cilium-ca -o yaml > /tmp/cilium-ca.yml
+      - kubectl --context k8s delete secret -n kube-system cilium-ca || true
+      - kubectl --context k8s create -f /tmp/cilium-ca.yml
       - rm -f /tmp/cilium-ca.yml
       #- cilium clustermesh connect --context k0s --destination-context k8s
     preconditions:
