--- a/ansible/kubernetes/playbooks/cluster-installation.yaml
+++ b/ansible/kubernetes/playbooks/cluster-installation.yaml
@@ -34,11 +34,16 @@
       vars:
         k3s_state: installed
 
+    - name: Creates kubeconfigs dir
+      file:
+        path: ~/.kube/kubeconfigs
+        state: directory
+
     - name: Copy kubeconfig to provision folder
       run_once: true
       ansible.builtin.fetch:
         src: /etc/rancher/k3s/k3s.yaml
-        dest: "{{ playbook_dir }}/../../../{{ lookup('env', 'ENVIRONMENT') }}.kubeconfig"
+        dest: "~/.kube/kubeconfigs/{{ lookup('env', 'ENVIRONMENT') }}.kubeconfig"
         flat: true
       when:
         - k3s_primary_control_node is defined
@@ -49,9 +54,18 @@
       become: false
       run_once: true
       ansible.builtin.replace:
-        path: "{{ playbook_dir }}/../../../{{ lookup('env', 'ENVIRONMENT') }}.kubeconfig"
+        path: "~/.kube/kubeconfigs/{{ lookup('env', 'ENVIRONMENT') }}.kubeconfig"
         regexp: "https://127.0.0.1:6443"
         replace: "https://{{ lookup('env', (lookup('env', 'ENVIRONMENT')|upper) + '_VIP_IP' ) }}"
+
+    - name: Update kubeconfig with the environment context name
+      delegate_to: localhost
+      become: false
+      run_once: true
+      ansible.builtin.replace:
+        path: "~/.kube/kubeconfigs/{{ lookup('env', 'ENVIRONMENT') }}.kubeconfig"
+        regexp: "default"
+        replace: "lookup('env', 'ENVIRONMENT')"
 
     - name: Wait for custom manifests to rollout
       when:
