--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -6,7 +6,8 @@ vars:
   ANSIBLE_DIR: "{{.ROOT_DIR}}/ansible"
 
 env:
-  KUBECONFIG: "{{.ENVIRONMENT}}.kubeconfig"
+  KUBECONFIG:
+    sh: find ~/.kube/kubeconfigs -type f | tr '\n' ':'
 
 dotenv: [".env"]
 
