--- a/.taskfiles/externalsecrets.yaml
+++ b/.taskfiles/externalsecrets.yaml
@@ -10,13 +10,13 @@ tasks:
       namespace: '{{.namespace | default "default"}}'
     cmd: |
       {{if eq .secret ""}}
-        kubectl get secretstore.external-secrets.io --all-namespaces --no-headers -A | awk '{print $1, $2}' \
-          | xargs -n 2 -P 4 bash -c 'kubectl -n $0 annotate secretstore.external-secrets.io $1 force-sync=$(date +%s) --overwrite'
+        kubectl --context {{.ENVIRONMENT}} get secretstore.external-secrets.io --all-namespaces --no-headers -A | awk '{print $1, $2}' \
+          | xargs -n 2 -P 4 bash -c 'kubectl --context {{.ENVIRONMENT}} -n $0 annotate secretstore.external-secrets.io $1 force-sync=$(date +%s) --overwrite'
       {{else}}
-        kubectl -n {{.namespace}} annotate secretstore.external-secrets.io {{.secret}} force-sync=$(date +%s) --overwrite
+        kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} annotate secretstore.external-secrets.io {{.secret}} force-sync=$(date +%s) --overwrite
       {{end}}
     preconditions:
-      - kubectl -n {{.namespace}} get secretstore {{.secret}}
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} get secretstore {{.secret}}
 
   sync:
     desc: Sync ExternalSecret resources
@@ -25,10 +25,10 @@ tasks:
       namespace: '{{.namespace | default "default"}}'
     cmd: |
       {{if eq .secret ""}}
-        kubectl get externalsecret.external-secrets.io --all-namespaces --no-headers -A | awk '{print $1, $2}' \
-          | xargs -n 2 -P 4 bash -c 'kubectl -n $0 annotate externalsecret.external-secrets.io $1 force-sync=$(date +%s) --overwrite'
+        kubectl --context {{.ENVIRONMENT}} get externalsecret.external-secrets.io --all-namespaces --no-headers -A | awk '{print $1, $2}' \
+          | xargs -n 2 -P 4 bash -c 'kubectl --context {{.ENVIRONMENT}} -n $0 annotate externalsecret.external-secrets.io $1 force-sync=$(date +%s) --overwrite'
       {{else}}
-        kubectl -n {{.namespace}} annotate externalsecret.external-secrets.io {{.secret}} force-sync=$(date +%s) --overwrite
+        kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} annotate externalsecret.external-secrets.io {{.secret}} force-sync=$(date +%s) --overwrite
       {{end}}
     preconditions:
-      - kubectl -n {{.namespace}} get externalsecret {{.secret}}
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} get externalsecret {{.secret}}
