--- a/.taskfiles/kubernetes.yaml
+++ b/.taskfiles/kubernetes.yaml
@@ -10,7 +10,7 @@ tasks:
       claim: '{{ or .claim (fail "PersistentVolumeClaim `claim` is required") }}'
       namespace: '{{.namespace | default "default"}}'
     cmd: |
-      kubectl run -n {{.namespace}} debug-{{.claim}} -i --tty --rm --image=null --privileged --overrides='
+      kubectl --context {{.ENVIRONMENT}} run -n {{.namespace}} debug-{{.claim}} -i --tty --rm --image=null --privileged --overrides='
         {
           "apiVersion": "v1",
           "spec": {
@@ -44,23 +44,27 @@ tasks:
           }
         }'
     preconditions:
-      - kubectl -n {{.namespace}} get pvc {{.claim}}
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} get pvc {{.claim}}
+
+  get-nodes:
+    cmds:
+      - "kubectl --context {{.ENVIRONMENT}} get nodes"
 
   install-crds:
     desc: Add required initial CRDs
     cmds:
-      - "kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.66.0/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml"
-      - "kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.66.0/example/prometheus-operator-crd/monitoring.coreos.com_prometheusrules.yaml"
-      - "kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.66.0/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml"
-      - "kubectl apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_gatewayclasses.yaml"
-      - "kubectl apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml"
-      - "kubectl apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml"
-      - "kubectl apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_referencegrants.yaml"
-      - "kubectl apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml"
-      - "kubectl apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_tlsroutes.yaml"
-      - "kubectl apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_tcproutes.yaml"
-      - "kubectl apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_udproutes.yaml"
-      - "kubectl apply -f https://raw.githubusercontent.com/external-secrets/kubernetes-external-secrets/master/charts/kubernetes-external-secrets/crds/kubernetes-client.io_externalsecrets_crd.yaml"
+      - "kubectl --context {{.ENVIRONMENT}} apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.66.0/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml"
+      - "kubectl --context {{.ENVIRONMENT}} apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.66.0/example/prometheus-operator-crd/monitoring.coreos.com_prometheusrules.yaml"
+      - "kubectl --context {{.ENVIRONMENT}} apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.66.0/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml"
+      - "kubectl --context {{.ENVIRONMENT}} apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_gatewayclasses.yaml"
+      - "kubectl --context {{.ENVIRONMENT}} apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml"
+      - "kubectl --context {{.ENVIRONMENT}} apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml"
+      - "kubectl --context {{.ENVIRONMENT}} apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_referencegrants.yaml"
+      - "kubectl --context {{.ENVIRONMENT}} apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml"
+      - "kubectl --context {{.ENVIRONMENT}} apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_tlsroutes.yaml"
+      - "kubectl --context {{.ENVIRONMENT}} apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_tcproutes.yaml"
+      - "kubectl --context {{.ENVIRONMENT}} apply -f https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v0.7.1/config/crd/experimental/gateway.networking.k8s.io_udproutes.yaml"
+      - "kubectl --context {{.ENVIRONMENT}} apply -f https://raw.githubusercontent.com/external-secrets/kubernetes-external-secrets/master/charts/kubernetes-external-secrets/crds/kubernetes-client.io_externalsecrets_crd.yaml"
 
   setup-cilium-mesh:
     cmds:
