--- a/.taskfiles/volsync/Tasks.yaml
+++ b/.taskfiles/volsync/Tasks.yaml
@@ -24,11 +24,11 @@ tasks:
     desc: List all snapshots taken by restic for a given ReplicationSource (ex. task vs:list rsrc=plex [namespace=default])
     silent: true
     cmds:
-      - envsubst < <(cat {{.listJobTemplate}}) | kubectl apply -f -
-      - bash {{.waitForJobScript}} list-{{.rsrc}}-{{.ts}} {{.namespace}}
-      - kubectl -n {{.namespace}} wait job/list-{{.rsrc}}-{{.ts}} --for condition=complete --timeout=1m
-      - kubectl -n {{.namespace}} logs job/list-{{.rsrc}}-{{.ts}} --container list
-      - kubectl -n {{.namespace}} delete job list-{{.rsrc}}-{{.ts}}
+      - envsubst < <(cat {{.listJobTemplate}}) | kubectl --context {{.ENVIRONMENT}} apply -f -
+      - bash {{.waitForJobScript}} list-{{.rsrc}}-{{.ts}} {{.namespace}} {{.ENVIRONMENT}}
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} wait job/list-{{.rsrc}}-{{.ts}} --for condition=complete --timeout=1m
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} logs job/list-{{.rsrc}}-{{.ts}} --container list
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} delete job list-{{.rsrc}}-{{.ts}}
     vars:
       rsrc: '{{ or .rsrc (fail "ReplicationSource `rsrc` is required") }}'
       namespace: '{{.namespace | default "default"}}'
@@ -41,11 +41,11 @@ tasks:
     desc: Unlocks restic repository for a given ReplicationSource (ex. task vs:unlock rsrc=plex [namespace=default])
     silent: true
     cmds:
-      - envsubst < <(cat {{.unlockJobTemplate}}) | kubectl apply -f -
+      - envsubst < <(cat {{.unlockJobTemplate}}) | kubectl --context {{.ENVIRONMENT}} apply -f -
       - bash {{.waitForJobScript}} unlock-{{.rsrc}}-{{.ts}} {{.namespace}}
-      - kubectl -n {{.namespace}} wait job/unlock-{{.rsrc}}-{{.ts}} --for condition=complete --timeout=1m
-      - kubectl -n {{.namespace}} logs job/unlock-{{.rsrc}}-{{.ts}} --container unlock
-      - kubectl -n {{.namespace}} delete job unlock-{{.rsrc}}-{{.ts}}
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} wait job/unlock-{{.rsrc}}-{{.ts}} --for condition=complete --timeout=1m
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} logs job/unlock-{{.rsrc}}-{{.ts}} --container unlock
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} delete job unlock-{{.rsrc}}-{{.ts}}
     vars:
       rsrc: '{{ or .rsrc (fail "ReplicationSource `rsrc` is required") }}'
       namespace: '{{.namespace | default "default"}}'
@@ -55,27 +55,27 @@ tasks:
       - sh: test -f {{.unlockJobTemplate}}
 
   # To run backup jobs in parallel for all replicationsources:
-  #  - kubectl get replicationsources --all-namespaces --no-headers | awk '{print $2, $1}' | xargs --max-procs=4 -l bash -c 'task vs:snapshot rsrc=$0 namespace=$1'
+  #  - kubectl --context {{.ENVIRONMENT}} get replicationsources --all-namespaces --no-headers | awk '{print $2, $1}' | xargs --max-procs=4 -l bash -c 'task vs:snapshot rsrc=$0 namespace=$1'
   #
   snapshot:
     desc: Trigger a Restic ReplicationSource snapshot (ex. task vs:snapshot rsrc=plex [namespace=default])
     cmds:
-      - kubectl -n {{.namespace}} patch replicationsources {{.rsrc}} --type merge -p '{"spec":{"trigger":{"manual":"{{.ts}}"}}}'
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} patch replicationsources {{.rsrc}} --type merge -p '{"spec":{"trigger":{"manual":"{{.ts}}"}}}'
       # - bash {{.waitForJobScript}} volsync-src-{{.rsrc}} {{.namespace}}
-      # - kubectl -n {{.namespace}} wait job/volsync-src-{{.rsrc}} --for condition=complete --timeout=120m
+      # - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} wait job/volsync-src-{{.rsrc}} --for condition=complete --timeout=120m
       # TODO: Error from server (NotFound): jobs.batch "volsync-src-zzztest" not found
-      # - kubectl -n {{.namespace}} logs job/volsync-src-{{.rsrc}}
+      # - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} logs job/volsync-src-{{.rsrc}}
     vars:
       rsrc: '{{ or .rsrc (fail "ReplicationSource `rsrc` is required") }}'
       namespace: '{{.namespace | default "default"}}'
     env: *task-vars
     # preconditions:
     #   - sh: test -f {{.waitForJobScript}}
-    #   - sh: kubectl -n {{.namespace}} get replicationsources {{.rsrc}}
+    #   - sh: kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} get replicationsources {{.rsrc}}
     #     msg: "ReplicationSource '{{.rsrc}}' not found in namespace '{{.namespace}}'"
 
   # To run restore jobs in parallel for all replicationdestinations:
-  #   - kubectl get replicationsources --all-namespaces --no-headers | awk '{print $2, $1}' | xargs --max-procs=2 -l bash -c 'task vs:restore rsrc=$0 namespace=$1'
+  #   - kubectl --context {{.ENVIRONMENT}} get replicationsources --all-namespaces --no-headers | awk '{print $2, $1}' | xargs --max-procs=2 -l bash -c 'task vs:restore rsrc=$0 namespace=$1'
   #
   restore:
     desc: Trigger a Restic ReplicationSource restore (ex. task vs:restore rsrc=plex [namespace=default])
@@ -94,18 +94,18 @@ tasks:
       # 1) Query to find the Flux Kustomization associated with the ReplicationSource (rsrc)
       kustomization:
         sh: |
-          kubectl -n {{.namespace}} get replicationsource {{.rsrc}} \
+          kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} get replicationsource {{.rsrc}} \
             -o jsonpath="{.metadata.labels.kustomize\.toolkit\.fluxcd\.io/name}"
       # 2) Query to find the Claim associated with the ReplicationSource (rsrc)
       claim:
         sh: |
-          kubectl -n {{.namespace}} get replicationsource {{.rsrc}} \
+          kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} get replicationsource {{.rsrc}} \
             -o jsonpath="{.spec.sourcePVC}"
       # 3) Query to find the controller associated with the PersistentVolumeClaim (claim)
       controller:
         sh: |
-          app=$(kubectl -n {{.namespace}} get persistentvolumeclaim {{.claim}} -o jsonpath="{.metadata.labels.app\.kubernetes\.io/name}")
-          if kubectl -n {{ .namespace }} get deployment.apps/$app >/dev/null 2>&1 ; then
+          app=$(kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} get persistentvolumeclaim {{.claim}} -o jsonpath="{.metadata.labels.app\.kubernetes\.io/name}")
+          if kubectl --context {{.ENVIRONMENT}} -n {{ .namespace }} get deployment.apps/$app >/dev/null 2>&1 ; then
             echo "deployment.apps/$app"
           else
             echo "statefulset.apps/$app"
@@ -123,29 +123,29 @@ tasks:
     cmds:
       - flux -n flux-system suspend kustomization {{.kustomization}}
       - flux -n {{.namespace}} suspend helmrelease {{.rsrc}}
-      - kubectl -n {{.namespace}} scale {{.controller}} --replicas 0
-      - kubectl -n {{.namespace}} wait pod --for delete --selector="app.kubernetes.io/name={{.rsrc}}" --timeout=2m
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} scale {{.controller}} --replicas 0
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} wait pod --for delete --selector="app.kubernetes.io/name={{.rsrc}}" --timeout=2m
     env: *task-vars
 
   # Wipe the PVC of all data
   restore-wipe-job:
     internal: true
     cmds:
-      - envsubst < <(cat {{.wipeJobTemplate}}) | kubectl apply -f -
+      - envsubst < <(cat {{.wipeJobTemplate}}) | kubectl --context {{.ENVIRONMENT}} apply -f -
       - bash {{.waitForJobScript}} wipe-{{.rsrc}}-{{.claim}}-{{.ts}} {{.namespace}}
-      - kubectl -n {{.namespace}} wait job/wipe-{{.rsrc}}-{{.claim}}-{{.ts}} --for condition=complete --timeout=120m
-      - kubectl -n {{.namespace}} logs job/wipe-{{.rsrc}}-{{.claim}}-{{.ts}} --container wipe
-      - kubectl -n {{.namespace}} delete job wipe-{{.rsrc}}-{{.claim}}-{{.ts}}
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} wait job/wipe-{{.rsrc}}-{{.claim}}-{{.ts}} --for condition=complete --timeout=120m
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} logs job/wipe-{{.rsrc}}-{{.claim}}-{{.ts}} --container wipe
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} delete job wipe-{{.rsrc}}-{{.claim}}-{{.ts}}
     env: *task-vars
 
   # Create volsync replicationdestination CR to restore data
   restore-volsync-job:
     internal: true
     cmds:
-      - envsubst < <(cat {{.destinationTemplate}}) | kubectl apply -f -
+      - envsubst < <(cat {{.destinationTemplate}}) | kubectl --context {{.ENVIRONMENT}} apply -f -
       - bash {{.waitForJobScript}} volsync-dst-{{.rsrc}}-{{.claim}}-{{.ts}} {{.namespace}}
-      - kubectl -n {{.namespace}} wait job/volsync-dst-{{.rsrc}}-{{.claim}}-{{.ts}} --for condition=complete --timeout=120m
-      - kubectl -n {{.namespace}} delete replicationdestination {{.rsrc}}-{{.claim}}-{{.ts}}
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} wait job/volsync-dst-{{.rsrc}}-{{.claim}}-{{.ts}} --for condition=complete --timeout=120m
+      - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} delete replicationdestination {{.rsrc}}-{{.claim}}-{{.ts}}
     env: *task-vars
 
   # Resume Flux ks and hr
