--- a/.taskfiles/cilium.yaml
+++ b/.taskfiles/cilium.yaml
@@ -2,6 +2,11 @@
 version: "3"
 
 tasks:
+  
+  status:
+    cmds:
+      - cilium clustermesh status --context k0s
+      - cilium clustermesh status --context k8s
 
   setup-cilium-mesh:
     cmds:
