--- a/kubernetes/templates/vault-issuer.yaml
+++ b/kubernetes/templates/vault-issuer.yaml
@@ -3,7 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: vault-issuer
-  namespace: ingress
+  namespace: kube-system
 spec:
   vault:
     path: pki/sign/default
