--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -65,6 +65,13 @@ spec:
       gateway-api-secrets-namespace: "ingress"
     hubble:
       enabled: true
+      tls:
+        auto:
+          method: cert-manager
+          certManagerIssuerRef:
+            group: cert-manager.io
+            kind: Issuer
+            name: vault-issuer
       metrics:
         enabled:
           - dns:query
