drop api server

--- a/.taskfiles/cilium.yaml
+++ b/.taskfiles/cilium.yaml
@@ -11,8 +11,8 @@ tasks:
   setup-cilium-mesh:
     cmds:
       # TODO: make this use vault/cert-manager issuer
-      - kubectl --context k0s get secret -n kube-system cilium-ca -o yaml > /tmp/cilium-ca.yml
-      - kubectl --context k8s delete secret -n kube-system cilium-ca || true
-      - kubectl --context k8s create -f /tmp/cilium-ca.yml
-      - rm -f /tmp/cilium-ca.yml
+      # - kubectl --context k0s get secret -n kube-system cilium-ca -o yaml > /tmp/cilium-ca.yml
+      # - kubectl --context k8s delete secret -n kube-system cilium-ca || true
+      # - kubectl --context k8s create -f /tmp/cilium-ca.yml
+      # - rm -f /tmp/cilium-ca.yml
       - cilium clustermesh connect --context k0s --destination-context k8s
