--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
       apiserver:
         tls:
           auto:
-            method: cert-manager
+            method: certmanager
             certManagerIssuerRef:
               group: cert-manager.io
               kind: Issuer
