--- a/kubernetes/templates/vault-issuer.yaml
+++ b/kubernetes/templates/vault-issuer.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: kube-system
 spec:
   vault:
-    path: pki/sign/int_ca/default
+    path: pki/int_ca/sign/default
     server: $VAULT_ADDR
     auth:
       appRole:
