--- a/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -71,7 +71,7 @@ spec:
       enabled: true
       tls:
         auto:
-          method: cert-manager
+          method: certmanager
           certManagerIssuerRef:
             group: cert-manager.io
             kind: Issuer
