--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -67,7 +67,7 @@ spec:
       enabled: true
       tls:
         auto:
-          method: cert-manager
+          method: certmanager
           certManagerIssuerRef:
             group: cert-manager.io
             kind: Issuer
