--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -52,17 +52,21 @@ spec:
       socketPath: /var/run/k3s/containerd/containerd.sock
     endpointRoutes:
       enabled: true
-    ingressController:
-      enabled: false
-      enforceHttps: true
-      loadbalancerMode: shared
-      defaultSecretName: "${DOMAIN/./-}-tls"
-      defaultSecretNamespace: ingress
-      service:
-        name: cilium-ingress
-        type: LoadBalancer
-        loadBalancerIP: "${CILIUM_LB_IP}"
-      gateway-api-secrets-namespace: "ingress"
+    # gatewayAPI:
+    #   enabled: true
+    #   service:
+    #     loadBalancerIP: "${CILIUM_LB_IP}"
+    # ingressController:
+    #   enabled: true
+    #   enforceHttps: true
+    #   loadbalancerMode: shared
+    #   defaultSecretName: "${DOMAIN/./-}-tls"
+    #   defaultSecretNamespace: ingress
+    #   service:
+    #     name: cilium-ingress
+    #     type: LoadBalancer
+    #     loadBalancerIP: "${CILIUM_LB_IP}"
+    #   gateway-api-secrets-namespace: "ingress"
     hubble:
       enabled: true
       tls:
@@ -123,6 +127,7 @@ spec:
       mode: dsr
     localRedirectPolicy: true
     operator:
+      replicas: 1
       rollOutPods: true
       prometheus:
         enabled: true
