--- a/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -69,13 +69,13 @@ spec:
     #   gateway-api-secrets-namespace: "ingress"
     hubble:
       enabled: true
-      tls:
-        auto:
-          method: certmanager
-          certManagerIssuerRef:
-            group: cert-manager.io
-            kind: Issuer
-            name: vault-issuer
+      # tls:
+      #   auto:
+      #     method: certmanager
+      #     certManagerIssuerRef:
+      #       group: cert-manager.io
+      #       kind: Issuer
+      #       name: vault-issuer
       metrics:
         enabled:
           - dns:query
