--- a/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
       name: "k0s"
       id: "${CILIUM_ID}"
     clustermesh:
-      useAPIServer: false
+      useAPIServer: true
       apiserver:
         tls:
           auto:
@@ -68,14 +68,14 @@ spec:
     #     loadBalancerIP: "${CILIUM_LB_IP}"
     #   gateway-api-secrets-namespace: "ingress"
     hubble:
-      enabled: false
-      # tls:
-      #   auto:
-      #     method: certmanager
-      #     certManagerIssuerRef:
-      #       group: cert-manager.io
-      #       kind: Issuer
-      #       name: vault-issuer
+      enabled: true
+      tls:
+        auto:
+          method: certmanager
+          certManagerIssuerRef:
+            group: cert-manager.io
+            kind: Issuer
+            name: vault-issuer
       metrics:
         enabled:
           - dns:query
